--- a/laokou-cloud/laokou-nacos/src/main/resources/application.properties
+++ b/laokou-cloud/laokou-nacos/src/main/resources/application.properties
@@ -15,7 +15,7 @@
 #    *
 #    */
 # \u5BC6\u94A5
-jasypt.encryptor.password=@SECRET-KEY@
+jasypt.encryptor.password=${SECRET_KEY:laokou}
 # \u5F00\u542F\u8BF7\u6C42\u538B\u7F29
 server.compression.enabled=true
 # \u5DE5\u4F5C\u7EBF\u7A0B\u6C60\u7684\u6700\u5927\u7EBF\u7A0B\u6570
