--- a/laokou-cloud/laokou-monitor/src/main/resources/application.yml
+++ b/laokou-cloud/laokou-monitor/src/main/resources/application.yml
@@ -16,13 +16,13 @@
 #    */
 jasypt:
   encryptor:
-    password: @SECRET-KEY@
+    password: ${SECRET_KEY:laokou}
 
 server:
   port: ${SERVER_PORT:5000}
   ssl:
     # 开启证书
-    enabled: true
+    enabled: false
     # 证书位置
     key-store: classpath:scg-keystore.p12
     # 证书别名
@@ -32,7 +32,7 @@ server:
     # 证书密码
     key-store-password: laokou
   http2:
-    enabled: true
+    enabled: false
   shutdown: graceful
 
 spring:
