--- a/laokou-service/laokou-distributed-id/laokou-distributed-id-start/src/main/resources/application-dev.yml
+++ b/laokou-service/laokou-distributed-id/laokou-distributed-id-start/src/main/resources/application-dev.yml
@@ -18,22 +18,22 @@ spring:
   config:
     import:
       # 临时配置文件【解决拉取nacos配置文件时，group默认为DEFAULT_GROUP问题】
-      - optional:nacos:laokou-distributed-id.yaml?refreshEnabled=true&group=${NACOS-GROUP}
+      - optional:nacos:laokou-distributed-id.yaml?refreshEnabled=true&group=${NACOS_GROUP:IOT_GROUP}
   cloud:
     nacos:
       discovery:
         # 开启服务注册&发现
         enabled: true
-        server-addr: ${NACOS-DISCOVERY-ADDRESS}
-        namespace: ${NACOS-NAMESPACE}
-        username: ${NACOS-USERNAME}
-        password: ${NACOS-PASSWORD}
-        group: ${NACOS-GROUP}
+        server-addr: ${NACOS_DISCOVERY_ADDRESS:nacos:8848,nacos:8858,nacos:8868}
+        namespace: ${NACOS_NAMESPACE:0dac1a68-2f01-40df-bd26-bf0cb199057a}
+        username: ${NACOS_USERNAME:nacos}
+        password: ${NACOS_PASSWORD:nacos}
+        group: ${NACOS_GROUP:IOT_GROUP}
         # https
-        secure: @SSL-ENABLED@
+        secure: false
         # true 临时 false 持久
         ephemeral: true
-        cluster-name: ${NACOS-CLUSTER-NAME}
+        cluster-name: ${NACOS_CLUSTER_NAME:iot-cluster}
         heart-beat:
           # 开启心跳检测
           enabled: true
@@ -44,13 +44,13 @@ spring:
       config:
         # 开启配置中心
         enabled: true
-        server-addr: ${NACOS-CONFIG-ADDRESS}
-        namespace: ${NACOS-NAMESPACE}
-        username: ${NACOS-USERNAME}
-        password: ${NACOS-PASSWORD}
-        cluster-name: ${NACOS-CLUSTER-NAME}
+        server-addr: ${NACOS_CONFIG_ADDRESS:nacos:8848,nacos:8858,nacos:8868}
+        namespace: ${NACOS_NAMESPACE:0dac1a68-2f01-40df-bd26-bf0cb199057a}
+        username: ${NACOS_USERNAME:nacos}
+        password: ${NACOS_PASSWORD:nacos}
+        cluster-name: ${NACOS_CLUSTER_NAME:iot-cluster}
         # https://github.com/alibaba/spring-cloud-alibaba/blob/2021.x/spring-cloud-alibaba-docs/src/main/asciidoc-zh/nacos-config.adoc
         # 指定读取的文件格式
         file-extension: yaml
-        group: ${NACOS-GROUP}
+        group: ${NACOS_GROUP:IOT_GROUP}
         refresh-enabled: true
