--- a/laokou-service/laokou-logstash/laokou-logstash-start/src/main/resources/application.yml
+++ b/laokou-service/laokou-logstash/laokou-logstash-start/src/main/resources/application.yml
@@ -23,7 +23,7 @@ server:
   port: ${SERVER_PORT:10003}
   ssl:
     # 开启证书
-    enabled: @SSL-ENABLED@
+    enabled: false
     # 证书位置
     key-store: classpath:scg-keystore.p12
     # 证书别名
@@ -33,7 +33,7 @@ server:
     # 证书密码
     key-store-password: laokou
   http2:
-    enabled: @SSL-ENABLED@
+    enabled: false
   forward-headers-strategy: native
   shutdown: graceful
   servlet:
